# Eyes-closing-detector

./: CMakeLists.txt  README.md  detector.cpp
